Adjust hero height and fix horizontal overflow
Changed hero height from fixed pixels to vh, and in doing so seemed to
accidentally fix the horizontal overflow issue that suddenly existed.
However, the lack of wrapping on the large hero text causes the text to
overflow on vary narrow devices, and this should be fixed.

--- a/style.scss
+++ b/style.scss
@@ -244,7 +244,7 @@ a:active {
 //Place text below image instead
 #hero {
     position: relative;
-    height: 247px;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
